Новая страница Галерея и картинки
Валидатор выёбывается на картинки...

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
     <a href="#about"> О сайте </a><br/>
     <a href="#news"> Новости </a><br/>
-    <a href="#links"> Ссылки </a>
+    <a href="#links"> Ссылки </a><br/>
+    <a href="gallery.html"> Галерея ноги <a>
   </header>
 
   <hr/>
