--- a/gallery.html
+++ b/gallery.html
@@ -14,10 +14,11 @@
   <p> Тут навигация:
   </p>
 
+  <!-- Anchors -->
   <a href="index.html"> Главная страница </a><br/>
-  <a href="#about"> О сайте </a><br/>
-  <a href="#news"> Новости </a><br/>
-  <a href="#links"> Ссылки </a>
+  <a href="index.html#about"> О сайте </a><br/>
+  <a href="index.html#news"> Новости </a><br/>
+  <a href="index.html#links"> Ссылки </a>
 </header>
 
 <body>
@@ -33,33 +34,7 @@
   <img src="photos\P_20160802_153628.jpg" alt="bolnichniy 1" width="640" />
 
   <hr/>
-
-  <!-- LINKS -->
-  <p id="links"><i> Просто какие-то сссылки</i></p>
-
-  <a href="http://yandex.ru" title="перейти на ya.ru"> yandex.ru
-  </a>
-  <br/>
-  <br/>
-
-  <hr/>
-  <p><i>Подвал этого ебаного сайта</i></p>
-
-  <footer>
-
-    <!-- about -->
-
-    <h3 id="about"> О сайте </h3>
-    <p><b> Да это полный пиздец, а не сайт<br/> Вообще не советую тут быть</b></p>
-
-    <!-- News -->
-
-    <h3 id="news"> Новости </h3>
-    <p> А новостей и нет нихуя, <br/> Идите на хуй
-      <p>
-
-  </footer>  
-
+  
 </body>
 
 </html>
