--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,8 @@
 <header>
   <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcRUONrrcv4C_Q2h8TOyS5Te9LQiAoAR5KJOgNt4xncDttQ1OvN6" alt="denis na huyu povis" width="100" height="100" />
 
-  <p> Тут навигация:
+  <p>
+    <u>Тут навигация:</u>
   </p>
 
   <!-- Anchors -->
@@ -34,7 +35,15 @@
   <img src="photos\P_20160802_153628.jpg" alt="bolnichniy 1" width="640" />
 
   <hr/>
-  
+
+  <footer>
+
+    <p>
+     Год создания: <sub><small>Август</small></sub><sup><small>2016</small></sup>
+   </p>
+
+  </footer>
+
 </body>
 
 </html>
