--- a/gallery.html
+++ b/gallery.html
@@ -16,25 +16,33 @@
   </p>
 
   <!-- Anchors -->
-  <a href="index.html"> Главная страница </a><br/>
-  <a href="index.html#about"> О сайте </a><br/>
-  <a href="index.html#news"> Новости </a><br/>
-  <a href="index.html#links"> Ссылки </a>
+
+<ul type="square">
+  <li><a href="index.html"> Главная страница </a></li>
+  <li><a href="index.html#about"> О сайте </a></li>
+  <li><a href="index.html#news"> Новости </a></li>
+  <li><a href="index.html#links"> Ссылки </a></li>
+</ul>
+
 </header>
 
 <body>
 
   <h1>Галерея</h1>
   <h2>Фотки ноги и остального контента связанного с ногой</h2>
-  <img src="photos\20160804_150625.jpg" alt="lavka i ya" width="640" />
-  <img src="photos\20160804_150628.jpg" alt="lavka i ya 2" width="640" />
-  <img src="photos\P_20160802_133213.jpg" alt="rentgen 1" width="640" />
-  <img src="photos\P_20160802_133228.jpg" alt="rentgen 2" width="640" />
-  <img src="photos\P_20160802_151518.jpg" alt="noga v gipse doma" width="640" />
-  <img src="photos\P_20160802_151536.jpg" alt="foto kostiley" width="640" />
-  <img src="photos\P_20160802_153628.jpg" alt="bolnichniy 1" width="640" />
+  <img src="photos\noga\20160804_150625.jpg" alt="lavka i ya" width="640" />
+  <img src="photos\noga\20160804_150628.jpg" alt="lavka i ya 2" width="640" />
+  <img src="photos\noga\P_20160802_133213.jpg" alt="rentgen 1" width="640" />
+  <img src="photos\noga\P_20160802_133228.jpg" alt="rentgen 2" width="640" />
+  <img src="photos\noga\P_20160802_151518.jpg" alt="noga v gipse doma" width="640" />
+  <img src="photos\noga\P_20160802_151536.jpg" alt="foto kostiley" width="640" />
+  <img src="photos\noga\P_20160802_153628.jpg" alt="bolnichniy 1" width="640" />
 
   <hr/>
+  <p>
+    Просто сетка с 125фпс
+  </p>
+  <iframe src="http://125fps.challonge.com/ru/sundaycup50/module" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
 
   <footer>
 
