--- a/index.html
+++ b/index.html
@@ -11,15 +11,56 @@
 <body>
 
   <header>
+
     <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcRUONrrcv4C_Q2h8TOyS5Te9LQiAoAR5KJOgNt4xncDttQ1OvN6" alt="denis na huyu povis" width="100" height="100" />
 
-    <p> Тут навигация:
+    <p>Вводи логин и пароль сука!!!</p>
+
+  <form action="#action1">
+    <input type="text" name="login" value="твой логин тварь" title="пиши логин" />
+    <input type="password" name="password" title="пиши пароль" />
+
+
+    <p>Я это:</p>
+    <input type="radio" name="sex" value="male" /> мужик
+    <input type="radio" name="sex" value="female" /> тёлка <br/>
+    <br/>
+
+    <p>Ломал ногу?</p>
+    <input type="checkbox" name="lomalnogu" value="da" /> Да ломал ногу
+    <input type="checkbox" name="lomalnogu" value="dada" /> И ногу и руку
+    <input type="checkbox" name="lomalnogu" value="net" /> Мне повезло я нихуя не ломал
+    <br/><br/>
+    <p>Степень моей дебильности: <input type="range" /> </p> <br /><br />
+
+
+    <p>Какие тёлки нравятся??? <select name="telki">
+      <option value="girnie"> жирные </option>
+      <option value="srednie" selected="selected"> средние  </option>
+      <option value="hudie"> худые </option>
+    </select></p>
+
+    <br /><br />
+
+
+    <input type="submit" value="отправить свой высер " />
+    <input type="reset" value="Обнулить к ебеням всё " />
+
+
+  </form>
+
+    <p>
+      <u>Тут навигация:</u>
     </p>
 
-    <a href="#about"> О сайте </a><br/>
-    <a href="#news"> Новости </a><br/>
-    <a href="#links"> Ссылки </a><br/>
-    <a href="gallery.html"> Галерея ноги <a>
+  <ul type="square">
+    <li><a href="#about"> О сайте </a></li>
+    <li><a href="#news"> Новости </a></li>
+    <li><a href="#links"> Ссылки </a></li>
+    <li><a href="gallery.html"> Галерея ноги </a></li>
+    <li><a href="gallery.html" target="_blank"> Перейти в галерею ноги в новом окне </a></li>
+  </ul>
+
   </header>
 
   <hr/>
@@ -41,7 +82,7 @@
   <h3>Стишок</h3>
   <p>
     Я не знаю почему,<br/> Обосрался на скаку.<br/>
-    <em>пидр</em>
+    <em><s>пидр</s></em>
   </p>
 
   <img src="http://lorempixel.com/400/200/sports/Dummy-Text/" width="320" height="240" alt="fashionimg" />
@@ -51,13 +92,33 @@
   <!-- LINKS -->
   <p id="links"><i> Просто какие-то сссылки</i></p>
 
-  <a href="http://yandex.ru" title="перейти на ya.ru"> yandex.ru
-  </a>
+<ul>
+  <li><a href="http://whise.ru" target="_blank" title="перейти на whise.ru"> <img src="photos\whiselogo.gif" alt="whiselogo" width="100"/> </a></li>
+</ul>
+
   <br/>
   <br/>
 
   <hr/>
+
+      <!-- Table -->
+
+    <table border=1>
+      <caption>Таблица</caption>
+      <tr>
+        <td rowspan="2"> First</td>
+        <td colspan="2"> Second</td>
+      </tr>
+
+      <tr>
+        <td>Third</td>
+        <td>Fourth</td>
+      </tr>
+
+    </table>
+
   <p><i>Подвал этого ебаного сайта</i></p>
+
 
   <footer>
 
@@ -71,6 +132,10 @@
     <h3 id="news"> Новости </h3>
     <p> А новостей и нет нихуя, <br/> Идите на хуй
       <p>
+
+    <p>
+     Год создания: <sub><small>Август</small></sub><sup><small>2016</small></sup>
+   </p>
 
   </footer>
 
