CSS для картины если чо
<style type="text/css">
table { border-collapse: collapse; width: 400px;}
td { border: 5px solid #000; }
</style>

--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
 <html>
 
 <head>
-  <title>Gallery</title>
+  <title>Галлерея ноги</title>
 </head>
 
 <header>
@@ -46,9 +46,7 @@
   <iframe src="http://125fps.challonge.com/ru/sundaycup50/module" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
   <footer>
 
-    <p>
-     Год создания: <sub><small>Август</small></sub><sup><small>2016</small></sup>
-   </p>
+  <p><center><address>Год создания: <sub><small>Август</small></sub><sup><small>2016</small></sup>. Хуй проссышь откуда сайт</address></p>
 
   </footer>
 
