--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <input type="checkbox" name="lomalnogu" value="dada" /> И ногу и руку
   <input type="checkbox" name="lomalnogu" value="net" /> Мне повезло я нихуя не ломал
   <br/><br/>
-  <p>Степень моей дебильности: <input type="range" /> </p> <br /><br />
+  <p>Степень твоей дебильности: <input type="range" /> </p> <br /><br />
 
 
   <p>Какие тёлки нравятся??? <select name="telki">
