--- a/index.html
+++ b/index.html
@@ -175,13 +175,14 @@
     <td>123</td>
     <td>123</td>
     <td>123</td>
-    <td bgcolor="#fffa69" colspan="2" rowspan="3">123</td>
+    <td bgcolor="#fffa69" colspan="2" >123</td>
 
   </tr>
 
   <tr>
     <td>123</td>
     <td bgcolor="#ff5b2d" colspan="3" rowspan="3">123</td>
+    <td bgcolor="#fffa69" colspan="2" rowspan="2" > 123</td>
 
 
   </tr>
@@ -230,6 +231,11 @@
 
   </tr>
 </table>
+
+<br/>
+
+
+  <img src="photos\other\tables_hw.png" alt="kartinasrany" width="183">
 
   <p><i>Подвал этого ебаного сайта</i></p>
 
