--- a/index.html
+++ b/index.html
@@ -169,69 +169,58 @@
     </p>
 
     <table border=1>
-      <caption>Просто пиздец</caption>
-  <tr>
-    <td>123</td>
-    <td>123</td>
-    <td>123</td>
-    <td>123</td>
-    <td bgcolor="#fffa69" colspan="2" >123</td>
+    <caption>Просто пиздец</caption>
+    <tr>
+      <td colspan="2">123</td>
+      <td colspan="2">123</td>
 
-  </tr>
+      <td bgcolor="#fffa69" colspan="2">123</td>
 
-  <tr>
-    <td>123</td>
-    <td bgcolor="#ff5b2d" colspan="3" rowspan="3">123</td>
-    <td bgcolor="#fffa69" colspan="2" rowspan="2" > 123</td>
+    </tr>
 
-
-  </tr>
-
-  <tr>
-    <td>123</td>
+    <tr>
+      <td rowspan="2">123</td>
+      <td bgcolor="#ff5b2d" colspan="3" rowspan="3">123</td>
+      <td bgcolor="#fffa69" colspan="2" rowspan="2"> 123</td>
 
 
-  </tr>
+    </tr>
+    <tr>
 
-  <tr>
-    <td>123</td>
-    <td>123</td>
-    <td>123</td>
-
-  </tr>
-
-  <tr>
-    <td>123</td>
-    <td bgcolor="#000000" colspan="2" rowspan="2">123</td>
-    <td>123</td>
-    <td>123</td>
-    <td>123</td>
-
-  </tr>
-
-  <tr>
-    <td bgcolor="#fffa69" rowspan="3">123</td>
-    <td>123</td>
-    <td bgcolor="#074481" rowspan="2" colspan="2">123</td>
-
-  </tr>
-  <tr>
-    <td>123</td>
-    <td>123</td>
-    <td bgcolor="#000000" colspan="1">123</td>
+    </tr>
+    <tr>
+      <td rowspan="2">123</td>
+      <td>123</td>
+      <td>123</td>
 
 
-  </tr>
-  <tr>
-    <td>123</td>
-    <td>123</td>
-    <td>123</td>
-    <td>123</td>
-    <td>123</td>
+    </tr>
 
-  </tr>
-</table>
+    <tr>
 
+      <td bgcolor="#000000" colspan="2" rowspan="2">123</td>
+      <td>123</td>
+      <td bgcolor="#ffffff" colspan="2">123</td>
+
+    </tr>
+
+    <tr>
+      <td bgcolor="#fffa69" rowspan="3">123</td>
+      <td>123</td>
+      <td bgcolor="#074481" rowspan="2" colspan="2">123</td>
+
+    </tr>
+    <tr>
+      <td colspan="2" rowspan="2">123</td>
+      <td bgcolor="#000000">123</td>
+
+
+    </tr>
+    <tr>
+      <td colspan="3">123</td>
+    </tr>
+
+  </table>
 <br/>
 
 
