--- a/gallery.html
+++ b/gallery.html
@@ -6,14 +6,13 @@
 
 <head>
   <title>Галлерея ноги</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <header>
   <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcRUONrrcv4C_Q2h8TOyS5Te9LQiAoAR5KJOgNt4xncDttQ1OvN6" alt="denis na huyu povis" width="100" height="100" />
 
-  <p>
-    <u>Тут навигация:</u>
-  </p>
+  <p class="navitext">Тут навигация</p>
 
   <!-- Anchors -->
 
