--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 <head>
   <title>Сайт про ногу</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
@@ -16,9 +17,7 @@
 
 
 
-    <p>
-      <u>Тут навигация:</u>
-    </p>
+    <p class="navitext"> Тут навигация</p>
 
   <ul type="square">
     <li><a href="#about"> О сайте </a></li>
@@ -31,9 +30,11 @@
   <p>Вводи логин и пароль сука!!!</p>
 
 <form action="#action1">
-  <input type="text" name="login" value="" title="пиши логин" />
-  <input type="password" name="password" title="пиши пароль" />
 
+<div class="lopass">
+  <input type="text" name="login" value="" title="пиши логин" />
+  <input type="password" name="password" value="" title="пиши пароль" />
+</div>
 
   <p>Я это:</p>
   <input type="radio" name="sex" value="male" /> мужик
