--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <head>
   <title>Сайт про ногу</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
+
+
+
 </head>
 
 <body>
@@ -14,7 +17,7 @@
   <header>
 
     <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcRUONrrcv4C_Q2h8TOyS5Te9LQiAoAR5KJOgNt4xncDttQ1OvN6" alt="denis na huyu povis" width="100" height="100" />
-
+  <audio id="bgAudio" controls="controls" loop="loop" src="audio\Anberlin - (The Symphony of) Blasé.mp3"></audio>
 
 
     <p class="navitext"> Тут навигация</p>
@@ -112,21 +115,6 @@
 
   <hr/>
 
-  <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/279216836&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
-
-  <!-- h1 to h6 -->
-
-  <h1 title="текст заголовка h1 подсветка"> H1 text</h1>
-  <!-- atribute test -->
-
-  <h2>H2 text</h2>
-  <h3>H3 text</h3>
-  <h4>H4 text</h4>
-  <h5>H5 text</h5>
-  <h6>H6 text</h6>
-
-
-  <hr/>
   <!-- p here -->
   <h3>Стишок</h3>
   <p>
@@ -169,18 +157,18 @@
       Это самая охуенная картина
     </p>
 
-    <table border=1>
+    <table class="kartina" border=1>
     <caption>Просто пиздец</caption>
     <tr>
-      <td colspan="2">123</td>
-      <td colspan="2">123</td>
+      <td bgcolor="#ffffff" colspan="2">123</td>
+      <td bgcolor="#ffffff" colspan="2">123</td>
 
       <td bgcolor="#fffa69" colspan="2">123</td>
 
     </tr>
 
     <tr>
-      <td rowspan="2">123</td>
+      <td bgcolor="#ffffff" rowspan="2">123</td>
       <td bgcolor="#ff5b2d" colspan="3" rowspan="3">123</td>
       <td bgcolor="#fffa69" colspan="2" rowspan="2"> 123</td>
 
@@ -190,9 +178,9 @@
 
     </tr>
     <tr>
-      <td rowspan="2">123</td>
-      <td>123</td>
-      <td>123</td>
+      <td bgcolor="#ffffff"rowspan="2">123</td>
+      <td bgcolor="#ffffff">123</td>
+      <td bgcolor="#ffffff">123</td>
 
 
     </tr>
@@ -200,25 +188,25 @@
     <tr>
 
       <td bgcolor="#000000" colspan="2" rowspan="2">123</td>
-      <td>123</td>
+      <td bgcolor="#ffffff">123</td>
       <td bgcolor="#ffffff" colspan="2">123</td>
 
     </tr>
 
     <tr>
       <td bgcolor="#fffa69" rowspan="3">123</td>
-      <td>123</td>
+      <td bgcolor="#ffffff">123</td>
       <td bgcolor="#074481" rowspan="2" colspan="2">123</td>
 
     </tr>
     <tr>
-      <td colspan="2" rowspan="2">123</td>
+      <td bgcolor="#ffffff" colspan="2" rowspan="2">123</td>
       <td bgcolor="#000000">123</td>
 
 
     </tr>
     <tr>
-      <td colspan="3">123</td>
+      <td bgcolor="#ffffff" colspan="3">123</td>
     </tr>
 
   </table>
